Enable autohide frame in Snapped ClientControlledShellSurface

Bug: 869429
Test: covered by unittest
Change-Id: I192d74e0dd467238af2bf0db7e7e37b5df69ed81
Reviewed-on: https://chromium-review.googlesource.com/1156881
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580007}
Former-commit-id: 68e0e1a99883a5558130a99402394e0cb38e62b4